fix gap between icon and text in callout on chrome android

--- a/src/components/callout/callout.scss
+++ b/src/components/callout/callout.scss
@@ -2,7 +2,6 @@
 
 .callout {
   display: flex;
-  gap: 10px;
   padding: 14px;
   border: 1px solid $white;
   box-shadow: 3px 3px 0px $white;
@@ -40,6 +39,7 @@
   }
 
   &__icon {
+    margin-right: 10px;
     color: $white;
   }
 }
